test/fixtures/public/fail/syntactical/BlowUp.jmm
class BlowUp {
	public static void main(String[] args) {
		while (i +) {
				while (j < ) {
					
			}
		}

	}

	public int gi() {
		while (i[2 < a.length) {
					
			}
		}
		asfa();
		while (j[3 < a.length) {
					
		}
	}
	}
}